data rest + hal explorer
data rest 와 hal explorer 을 그래들로 다운 받아 실행 해 보았다.

간단한 조회만 DataRestTest라는 테스트 파일을 만들어 조회를 하니 정상적으로 나왔다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,7 +25,7 @@ spring:
   h2.console.enabled: false
   sql.init.mode: always
   data.rest:
-    base-path: /api
+    base-path: /hal-api
     detection-strategy: annotated
   thymeleaf3.decoupled-logic: true
 
