--- a/.gitignore
+++ b/.gitignore
@@ -287,6 +287,9 @@ $RECYCLE.BIN/
 # Ignore Gradle GUI config
 gradle-app.setting
 
+# querydsl
+/src/main/generated
+
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
