로그인 로직 구현 완료
로그인 로직 구현을 완료 했다.
jwt 토큰을 이용하여 인증을 할 예정이여서
jwt 토큰을 사용했다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,8 +15,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: username
-    password: 구글보안비밀번호
+    username:  username
+    password: 구글앱 비밀번호
     properties:
       mail:
         smtp:
@@ -45,6 +45,9 @@ spring:
 server:
   port: 8081
 
-
+jwt:
+  secret-key: board_site.trip_web_application.secret_key
+  #30 days
+  token.expired-time-ms: 2592000000
 ---
 
