파일 이미지 로직 구성
어디에서나 사용해야 될 첨부파일 (이미지) 로직을 구성하였다.
1.테이블에 파일의 정보 / 이름 (uuid)로 변경하여 저장 을 한다.
2.테이블에 저장한 파일의 순번을 가져와서 프론트 화면에 이미지를 다시 보여주게 한다.

TODO : 추후 추가될 기능은 첨부파일 다운로드를 추가할 예정이다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -44,7 +44,15 @@ spring:
   thymeleaf3.decoupled-logic: true
 server:
   port: 8081
-
+servlet:
+  multipart:
+    maxFileSize: 800MB
+    maxRequestSize: 800MB
+    enabled: true
+    location: C:\Git_project\board-site\src\main\resources\static\image
+custom:
+  path:
+    upload-images: C:\Git_project\board-site\src\main\resources\static\image
 jwt:
   secret-key: board_site.trip_web_application.secret_key
   #30 days
