첨부파일 썸네일 이미지 추가 및 여행 리스트 수정
첨부파일 썸네일 추가 테이블 변경이 일어나서 테스트 코드 수정 
또한 여행 리스트 상세 조회 시 여행 상세 조회와 여행사 리스트 조회를 따로 구분지어 조회하도록 수정 하였슴

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -30,14 +30,14 @@ spring:
 
   jpa:
     defer-datasource-initialization: true         # 2.5 이상 data.sql 실행
-    hibernate.ddl-auto: create                    # table 생성
+    hibernate.ddl-auto: update                    # table 생성
     open-in-view: false
     show-sql: true                                # 쿼리 보여줌
     properties:
       hibernate.format_sql: true
       hibernate.default_batch_fetch_size: 100 # N+1 이슈
   h2.console.enabled: false
-  sql.init.mode: always
+  sql.init.mode: NEVER
   data.rest:
     base-path: /hal-api
     detection-strategy: annotated
@@ -53,6 +53,7 @@ servlet:
 custom:
   path:
     upload-images: C:\Git_project\board-site\src\main\resources\static\image
+    thumbnail-images: C:\Git_project\board-site\src\main\resources\static\thumbnail
 jwt:
   secret-key: board_site.trip_web_application.secret_key
   #30 days
