--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,9 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
 
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
