아임포트 환불기능 추가
아임포트 기능 에서 환불 기능을 추가 하였다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -54,6 +54,9 @@ custom:
   path:
     upload-images: C:\Git_project\board-site\src\main\resources\static\image
     thumbnail-images: C:\Git_project\board-site\src\main\resources\static\thumbnail
+import:
+  rest-api: 아임포트 restapi
+  rest-api-secret: 아임포트 restapisecret키
 jwt:
   secret-key: board_site.trip_web_application.secret_key
   #30 days
