--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -54,6 +54,9 @@ custom:
   path:
     upload-images: C:\Git_project\board-site\src\main\resources\static\image
     thumbnail-images: C:\Git_project\board-site\src\main\resources\static\thumbnail
+import:
+  rest-api: rest-api
+  rest-api-secret: restp-api-key
 jwt:
   secret-key: board_site.trip_web_application.secret_key
   #30 days
