--- a/build.gradle
+++ b/build.gradle
@@ -29,8 +29,9 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
-
-
+    
+    implementation group: 'com.google.zxing', name: 'core', version: '3.5.0'
+    implementation group: 'com.google.zxing', name: 'javase', version: '3.5.0'
 
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
