카카오 로그인 기능 추가
카카오 로그인 기능을 추가 완료 하였다.
문제점이 있다.
 : 네이버 및 카카오 email이 같은 경우 둘 중 한개만 회원강비이 되는 현상 
 -> 이유는 아무래도 email을 기준으로 회원정보를 불러오는 토큰 이 있어서 문제 인거 같아
이 부분을 해결 할 예정이다.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -62,6 +62,10 @@ naver:
   client-id: VI3PelSRuX5_E4NdPZHj
   client-secret: CHD4HaNzd4
   callback-url: http://localhost:4000/NaverLoginCallback
+kakao:
+  rest-api-key: fa8b9147c368820f00315b9e2b68eae5
+  callback-url: http://localhost:4000/KakaoLoginCallback
+  admin-key: cce05f289cb3058bb7a61d4d1fce24b2
 jwt:
   secret-key: board_site.trip_web_application.secret_key
   #30 days
