--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -70,5 +70,12 @@ jwt:
   secret-key: board_site.trip_web_application.secret_key
   #30 days
   token.expired-time-ms: 2592000000
+batch:
+  initialize-schema: never
 ---
-
+spring:
+  config.activate.on-profile: heroku
+  datasource:
+    url: ${CLEARDB_DATABASE_URL}
+  jpa.hibernate.ddl-auto: create
+  sql.init.mode: always
