--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -77,5 +77,6 @@ spring:
   config.activate.on-profile: heroku
   datasource:
     url: ${JAWSDB_URL}
-  jpa.hibernate.ddl-auto: create
-  sql.init.mode: always
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa.hibernate.ddl-auto: update
+#  sql.init.mode: never
