--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -49,11 +49,11 @@ servlet:
     maxFileSize: 800MB
     maxRequestSize: 800MB
     enabled: true
-    location: C:\Git_project\board-site\src\main\resources\static\image
+    location: C:\Git_project\board-site\src\main\resources\templates\image
 custom:
   path:
-    upload-images: C:\Git_project\board-site\src\main\resources\static\image
-    thumbnail-images: C:\Git_project\board-site\src\main\resources\static\thumbnail
+    upload-images: C:\Git_project\board-site\src\main\resources\templates\image
+    thumbnail-images: C:\Git_project\board-site\src\main\resources\templates\thumbnail
 
 import:
   rest-api: 3071870338636273
@@ -61,10 +61,10 @@ import:
 naver:
   client-id: VI3PelSRuX5_E4NdPZHj
   client-secret: CHD4HaNzd4
-  callback-url: http://localhost:4000/NaverLoginCallback
+  callback-url: http://localhost:8081/NaverLoginCallback
 kakao:
   rest-api-key: fa8b9147c368820f00315b9e2b68eae5
-  callback-url: http://localhost:4000/KakaoLoginCallback
+  callback-url: http://localhost:8081/KakaoLoginCallback
   admin-key: cce05f289cb3058bb7a61d4d1fce24b2
 jwt:
   secret-key: board_site.trip_web_application.secret_key
