--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.8'
 
+    // https://mvnrepository.com/artifact/com.cloudinary/cloudinary-http44
+    implementation group: 'com.cloudinary', name: 'cloudinary-http44', version: '1.33.0'
+
+
     runtimeOnly 'org.postgresql:postgresql'
 
     implementation group: 'com.google.zxing', name: 'core', version: '3.5.0'
