--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -72,6 +72,12 @@ jwt:
   token.expired-time-ms: 2592000000
 batch:
   initialize-schema: never
+
+cloudinary:
+  cloud_name: hhnetuz2l
+  api_key: 165883987375785
+  api_secret: TM8jN2lzQtwyQpLkyZpYwsG0EjM
+
 ---
 spring:
   config.activate.on-profile: heroku
