--- a/build.gradle
+++ b/build.gradle
@@ -96,9 +96,7 @@ jar {
     }
 }
 
-// Herouku 설정
-jar {
-    manifest {
-        attributes('Main-Class': 'com.board.boardsite.BoardSiteApplication')
-    }
+
+bootJar {
+    archiveFileName ='app.jar'
 }
