--- a/.gitignore
+++ b/.gitignore
@@ -314,3 +314,6 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/java,gradle,macos,windows,eclipse,intellij+all
+
+###
+.env
