--- a/build.gradle
+++ b/build.gradle
@@ -92,10 +92,9 @@ clean {
 }
 jar {
     manifest {
-        attributes('Main-Class': 'com.board.projectboard.ProjectBoardApplication')
+        attributes('Main-Class': 'com.board.boardsite.BoardSiteApplication')
     }
 }
-
 
 bootJar {
     archiveFileName ='app.jar'
